# cmaq2hemco

./: .gitignore  environment.yml  pyproject.toml  submit_day.sh
.github/workflows/: test.yml
cmaq2hemco/: __init__.py  mp2022.py  utils.py
cmaq2hemco/mechrc/: __init__.py  cb6r5_ae7_aq.py  core.py
cmaq2hemco/tests/: test_aero_regrid.py  test_misc.py  test_mp2022.py
docs/source/: conf.py
examples/: aws_mp2022.py  viz_example.py
